--- a/analysis/study1.qmd
+++ b/analysis/study1.qmd
@@ -293,7 +293,20 @@ save(data, file = "../data/data.RData")
 
 - **Sample 1a**: Data from [Murphy's (2020)](https://osf.io/3m5nh/?view_only=a68051df4abe4ecb992f22dc8c17f769) study 1, downloaded from OSF, included `r report::report_participants(df1a, age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 1b**: Data from [Murphy's (2020)](https://osf.io/3m5nh/?view_only=a68051df4abe4ecb992f22dc8c17f769) study 6, downloaded from OSF, included `r report::report_participants(df1b, age = "Age", sex = NA, gender = "Gender")`.
-- **TODO: ADD INFO**
+- **Sample 2**: Data from [Gaggero's(2020)](https://osf.io/5x9sg/) study, downloaded from OSF, included `r report::report_participants(df2, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 3**: Data from [Campos's(2022)](https://osf.io/j6ef3) study, downloaded from OSF, included `r report::report_participants(df3, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 4**: Data from [Todd's(2022)]( https://osf.io/ms354/) study, downloaded from OSF, included `r report::report_participants(df4, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 5**: Data from [Arslanova (2022)](https://osf.io/mp3cy/) study, downloaded from OSF, included `r report::report_participants(df5, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 6**: Data from [Brand's(2022)](https://osf.io/xwz6g/) study, downloaded from OSF, included `r report::report_participants(df6, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 7a**: Data from [Brand's(2023)](https://osf.io/3f2h6/) study, downloaded from OSF, included `r report::report_participants(df7a, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 7b**: Data from [Brand's(2023)](https://osf.io/3f2h6/) study, downloaded from OSF, included `r report::report_participants(df7b, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 7c**: Data from [Brand's(2023)](https://osf.io/3f2h6/) study, downloaded from OSF, included `r report::report_participants(df7c, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 8a**: Data from [Lin's(2023)](https://osf.io/3eztd) study, downloaded from OSF, included `r report::report_participants(df8a, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 8b**: Data from [Lin's(2023)](https://osf.io/3eztd) study, downloaded from OSF, included `r report::report_participants(df8a, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 9**: Data from [VonMohr's(2023)](https://osf.io/7p9u5/) study 3, downloaded from OSF, included `r report::report_participants(df9, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 10a**: Data from [Makowski's(2023)] study , downloaded from OSF, included `r report::report_participants(df10a, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 10b**: Data from [Makowski's(2023)] study , downloaded from OSF, included `r report::report_participants(df10b, age = "Age", sex = NA, gender = "Gender")`.
+
 
 Total N = `r nrow(df1a) + nrow(df1b) + nrow(df2) + nrow(df3) + nrow(df4) + nrow(df5) + nrow(df6) + nrow(df7a) + nrow(df7b) + nrow(df7c) + nrow(df8a) + nrow(df8b) + nrow(df9) + nrow(df10a) + nrow(df10b)`.
 
