--- a/analysis/study1.qmd
+++ b/analysis/study1.qmd
@@ -302,7 +302,7 @@ save(data, file = "../data/data.RData")
 - **Sample 7b**: Data from [Brand's(2023)](https://osf.io/3f2h6/) study, downloaded from OSF, included `r report::report_participants(df7b, age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 7c**: Data from [Brand's(2023)](https://osf.io/3f2h6/) study, downloaded from OSF, included `r report::report_participants(df7c, age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 8a**: Data from [Lin's(2023)](https://osf.io/3eztd) study, downloaded from OSF, included `r report::report_participants(df8a, age = "Age", sex = NA, gender = "Gender")`.
-- **Sample 8b**: Data from [Lin's(2023)](https://osf.io/3eztd) study, downloaded from OSF, included `r report::report_participants(df8a, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 8b**: Data from [Lin's(2023)](https://osf.io/3eztd) study, downloaded from OSF, included `r report::report_participants(df8b, age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 9**: Data from [VonMohr's(2023)](https://osf.io/7p9u5/) study 3, downloaded from OSF, included `r report::report_participants(df9, age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 10a**: Data from [Makowski's(2023)] study , downloaded from OSF, included `r report::report_participants(df10a, age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 10b**: Data from [Makowski's(2023)] study , downloaded from OSF, included `r report::report_participants(df10b, age = "Age", sex = NA, gender = "Gender")`.
